avoid hover style collision + improve pro contrast

--- a/app/assets/stylesheets/shared/combobox.scss
+++ b/app/assets/stylesheets/shared/combobox.scss
@@ -21,9 +21,11 @@
       background-color: $primaryColor;
     }
 
-    &:hover,
-    &:focus-visible {
-      background-color: $darkColor;
+    &:not(.selected) {
+      &:hover,
+      &:focus-visible {
+        background-color: darken($primaryColor, 6%);
+      }
     }
   }
 }
